test/corpus/definitions/includes_definition.txt
============================================
Includes definition
============================================

Foo includes Bar;

----

(source_file
	(includes_definition
		lhs: (type_identifier)
		rhs: (type_identifier)
	)
)
