test/corpus/definitions/namespace_definition.txt
============================================
Namespace definition with operations
============================================

namespace CSS {
	CSSUnitValue number(double value);
	CSSUnitValue percent(double value);
};

----

(source_file
	(namespace_definition
		name: (identifier)
		body: (namespace_body
			(namespace_operation
				return_type: (type
					(distinguishable_type
						(type_identifier)))
				name: (identifier)
				arguments: (argument_list
					(argument
						type: (type
							(distinguishable_type
								(primitive_type
									(float_type))))
						name: (identifier)
					)
				)
			)
			(namespace_operation
				return_type: (type
					(distinguishable_type
						(type_identifier)))
				name: (identifier)
				arguments: (argument_list
					(argument
						type: (type
							(distinguishable_type
								(primitive_type
									(float_type))))
						name: (identifier)
					)
				)
			)
		)
	)
)

============================================
Partial namespace definition (empty)
============================================

partial namespace CSS {};

----

(source_file
	(namespace_definition
		name: (identifier)
		body: (namespace_body)
	)
)
