test/corpus/definitions/typedef_definition.txt
============================================
Typedef definition with single builtin type
============================================

typedef DOMString foo;

----
(source_file
	(typedef_definition
		type: (type (distinguishable_type (string_type)))
		name: (type_identifier)
	)
)

============================================
Typedef definition with union type
============================================

typedef (DOMString or unsigned long) StringOrNumber;

----

(source_file
	(typedef_definition
		type: (type
			(union_type
				(union_or_expression
					lhs_type: (distinguishable_type (string_type))
					rhs_type: (distinguishable_type (primitive_type (integer_type)))
				)
			)
		)
		name: (type_identifier)
	)
)
