test/corpus/includes_definition.txt
============================================
Includes definition
============================================

Foo includes Bar;

----

(source_file
	(includes_definition
		lhs: (identifier)
		rhs: (identifier)
	)
)
