test/corpus/includes_statement.txt
============================================
Includes statement
============================================

Foo includes Bar;

---

(source_file
	(includes_statement
		(identifier)
		(identifier)
	)
)
