test/corpus/namespace_definition.txt
============================================
Namespace definition with operations
============================================

namespace CSS {
	CSSUnitValue number(double value);
	CSSUnitValue percent(double value);
};

----

(source_file
	(namespace_definition
		(identifier)
		(regular_operation
			(type
				(distinguishable_type
					(identifier)))
			(operation_rest
				(identifier)
				(argument_list
					(argument
						(type
							(distinguishable_type
								(primitive_type
									(float_type))))
						(identifier)))))
		(regular_operation
			(type
				(distinguishable_type
					(identifier)))
			(operation_rest
				(identifier)
				(argument_list
					(argument
						(type
							(distinguishable_type
								(primitive_type
									(float_type))))
						(identifier)))))
	)
)

============================================
Partial namespace definition (empty)
============================================

partial namespace CSS {};

----

(source_file
	(namespace_definition
		(identifier)
	)
)
