test/corpus/typedef_definition.txt
============================================
Typedef definition with single builtin type
============================================

typedef DOMString foo;

----
(source_file
	(typedef_definition
		type: (type_with_extended_attributes
			(type
				(distinguishable_type
					(string_type)
				)
			)
		)
		name: (identifier)
	)
)

============================================
Typedef definition with union type
============================================

typedef (DOMString or unsigned long) StringOrNumber;

----

(source_file
	(typedef_definition
		type: (type_with_extended_attributes
			(type
				(union_type
					(union_or_expression
						left: (distinguishable_type
							(string_type))
						right: (distinguishable_type
							(primitive_type
								(integer_type)))))))
		name: (identifier)
	)
)
