test/corpus/typedef_statement.txt
============================================
Typedef statement with single builtin type
============================================

typedef DOMString foo;

----
(source_file
	(typedef_statement
		(type_with_extended_attributes
			(type
				(distinguishable_type
					(string_type)
				)
			)
		)
		(identifier)
	)
)

============================================
Typedef statement with union type
============================================

typedef (DOMString or unsigned long) StringOrNumber;

----

(source_file
	(typedef_statement
		(type_with_extended_attributes
			(type
				(union_type
					(union_or_expression
						(distinguishable_type
							(string_type))
						(distinguishable_type
							(primitive_type
								(integer_type)))))))
		(identifier)
	)
)
